[workspace]
resolver = "2"
members = ["relay", "backend", "fl"]

[workspace.package]
edition = "2021"
publish = false

[workspace.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "sync", "time", "macros"] }
async-channel = "2"
futures-lite = "2"
bytes = "1"
thiserror = "2"
hex = "0.4"
log = "0.4"
env_logger = "0.11"

# Protocol crates pinned to match the running KeyOS sim
# (KeyOS-dev qlv2-hosted-fixes): ql-* live on the ql-v2-shared-api
# branch (Nico's post-qlv2 refactor), btp is at tag 5.6.2. Both sides
# must agree on the wire format or the XX handshake will not validate.
ql-wire = { git = "https://github.com/Foundation-Devices/foundation-api", branch = "ql-v2-shared-api", features = ["test-utils"] }
ql-fsm = { git = "https://github.com/Foundation-Devices/foundation-api", branch = "ql-v2-shared-api" }
ql-runtime = { git = "https://github.com/Foundation-Devices/foundation-api", branch = "ql-v2-shared-api", features = ["rpc", "log"] }
ql-rpc = { git = "https://github.com/Foundation-Devices/foundation-api", branch = "ql-v2-shared-api" }
ql-api = { git = "https://github.com/Foundation-Devices/foundation-api", branch = "ql-v2-shared-api" }
btp = { git = "https://github.com/Foundation-Devices/foundation-api", tag = "5.6.2" }

[profile.release]
lto = "thin"
codegen-units = 1
