[package]
name = "backend"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[features]
default = ["chat", "mcp"]
chat = []
mcp = ["dep:axum", "dep:tokio-stream", "dep:serde", "dep:serde_json", "dep:uuid"]

[dependencies]
ql-wire = { workspace = true }
ql-fsm = { workspace = true }
ql-runtime = { workspace = true }
ql-rpc = { workspace = true }
ql-api = { workspace = true }
ql-common = { workspace = true }
btp = { workspace = true }

tokio = { workspace = true }
async-channel = { workspace = true }
futures-lite = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

# mcp feature
axum = { version = "0.7", features = ["macros"], optional = true }
tokio-stream = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }
