# SPDX-FileCopyrightText: 2026 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "fl"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[[bin]]
name = "fl"
path = "src/main.rs"

[features]
default = ["all"]
all = ["relay", "backend", "fido", "piv"]
relay = ["dep:relay", "dep:tokio"]
backend = ["dep:backend", "dep:tokio"]
mcp = ["backend", "backend/mcp"]
fido = ["dep:hidapi"]
piv = ["dep:pcsc", "dep:p256", "dep:x509-cert"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true, optional = true }
relay = { path = "../relay", optional = true }
backend = { path = "../backend", optional = true, default-features = false }
hidapi = { version = "2", optional = true }
pcsc = { version = "2", optional = true }
p256 = { version = "0.13", features = ["ecdsa"], optional = true }
x509-cert = { version = "0.2", optional = true }
