# SPDX-FileCopyrightText: 2026 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "fl"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[[bin]]
name = "fl"
path = "src/main.rs"

[features]
default = ["all"]
all = ["relay", "backend", "fido", "piv", "ccid-inspect"]
relay = ["dep:relay", "dep:tokio"]
backend = ["dep:backend", "dep:tokio"]
mcp = ["backend", "backend/mcp"]
fido = ["dep:hidapi", "dep:p256", "dep:sha2"]
piv = ["dep:pcsc", "dep:p256", "dep:x509-cert"]
ccid-inspect = ["dep:nusb"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true, optional = true }
relay = { path = "../relay", optional = true }
backend = { path = "../backend", optional = true, default-features = false }
hidapi = { version = "2", optional = true }
pcsc = { version = "2", optional = true }
p256 = { version = "0.13", features = ["ecdsa"], optional = true }
sha2 = { version = "0.10", optional = true }
x509-cert = { version = "0.2", optional = true }
nusb = { version = "0.2", optional = true }
